--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     ]
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-native": "^0.63.2"
+    "react": "^16.0 || ^17.0",
+    "react-native": "^0.52.0 || ^0.66.4 || ^0.68.1"
   }
 }
